--- a/style.css
+++ b/style.css
@@ -2,7 +2,28 @@ body{
 	margin: 0;
 }
 
-#wm_toolBar:after{
+.windowArea section{
+	background-color: #E0E0E0;
+	color: #000;
+	border: 1px solid #808080;
+	margin: auto;
+	padding: .5rem;
+	width: 50%;
+}
+
+.windowArea section header{
+	background-color: #C0C0C0;
+	color: #000;
+	margin: -.5rem -.5rem .5em -.5em;
+}
+
+.windowArea section header h1{
+	font-size: 1.2rem;
+	margin: 0;
+	padding: .25rem;
+}
+
+/*#wm_toolBar:after{
 	content: ".";
 	display: block;
 	visibility: hidden;
@@ -23,4 +44,43 @@ body{
 
 #wm_toolBar li{
 	display: inline-block;
+}*/
+
+#wm_mainArea{
+	position: relative;
+}
+
+#wm_parts{
+	box-sizing: content-box;
+	margin: 0;
+	position: absolute;
+	padding: .5rem;
+	right: 0;
+	top: 0;
+}
+
+#wm_parts section{
+	background-color: #E0E0E0;
+	border: 3px double #C0C0C0;
+	color: #000;
+	margin: 1rem;
+	padding: 0;
+}
+
+#wm_parts section h1{
+	background-color: #C0C0C0;
+	color: #000;
+	font-size: 1.5rem;
+	margin: 0;
+	padding: .25rem;
+}
+
+#wm_parts_list canvas{
+	display: block;
+}
+
+#wm_parts_list button{
+	display: inline-block;
+	margin: .25rem;
+	padding: 0rem .25rem;
 }
