MapViewで背景パーツが描画できるように実装
- MapViewは1レイヤーだけの描画にして、各パーツ種類毎に複数用意するつもりです。
- null 判定チェックが多いため、描画できる条件でも描画できない場合があります(もうちょっとわかり易くできないか検討中です)。

--- a/packages/maker/src/App.module.scss
+++ b/packages/maker/src/App.module.scss
@@ -19,8 +19,10 @@
 }
 
 .mapView {
-    overflow: auto;
+    background-color: rgb(158, 158, 158);
     grid-area: mapview;
+    overflow: auto;
+    text-align: left;
 }
 
 .toolPanel {
