react-split-grid を react-split-pane に切り替えて実装,

--- a/packages/maker/src/components/MapView.module.scss
+++ b/packages/maker/src/components/MapView.module.scss
@@ -1,5 +1,9 @@
 .mapView {
+    height: 100%;
+    line-height: 0;
+    overflow: auto;
     position: relative;
+    width: 100%;
 }
 
 .mapLayer {
