--- a/packages/maker/src/App.module.scss
+++ b/packages/maker/src/App.module.scss
@@ -1,9 +1,10 @@
+@import './components/common/SplitPane.scss';
+
 .app {
     display: grid;
     grid-template:
-        [toolbar]   "toolbar   toolbar"   60px  [toolbar]
-        [mapview]   "mapview   infopanel" 1fr   [infopanel]
-        [toolpanel] "toolpanel infopanel" 240px [infopanel]
+        [toolbar]   "toolbar  toolbar"   60px  [toolbar]
+        [editarea]  "editarea infopanel" 1fr   [infopanel]
                    / 1fr       320px;
     height: 100vh;
     width: 100vw;
@@ -18,13 +19,15 @@
     grid-area: infopanel;
 }
 
-.mapView {
+.editArea {
     background-color: rgb(158, 158, 158);
-    grid-area: mapview;
+    grid-area: editarea;
+    /**
+     * react-split-pane は SplitPane コンポーネントに position: absolute; のプロパティが存在します。
+     *     この場合、ページ全体にズレが発生するため、 position: relative; で予防しています。
+     * @todo SplitPane の親要素用の CSS を common ディレクトリに置いても良いかもしれない。
+     */
+    position: relative;
     overflow: auto;
     text-align: left;
-}
-
-.toolPanel {
-    grid-area: toolpanel;
 }
