--- a/packages/maker/src/components/common/PartsList.module.scss
+++ b/packages/maker/src/components/common/PartsList.module.scss
@@ -4,5 +4,5 @@
      * @todo 単純に済ませるために line-height: 0 としているが、問題があったら flex や grid に変更しておく。
      */
     line-height: 0;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
