editArea の overflow: auto を削除、InfoPanel に背景色を設定

--- a/packages/maker/src/App.module.scss
+++ b/packages/maker/src/App.module.scss
@@ -23,6 +23,9 @@
      * @todo SplitPane の親要素用の CSS を common ディレクトリに置いても良いかもしれない。
      */
     position: relative;
-    overflow: auto;
     text-align: left;
+}
+
+.infoPanel {
+    background-color: #fff;
 }
