InfoPanelの表示切り替えをAppが担うように仕様変更

--- a/packages/maker/src/App.module.scss
+++ b/packages/maker/src/App.module.scss
@@ -32,4 +32,9 @@
     width: 450px;
     overflow-x: hidden; // Segment や Menu のはみ出し対策
     overflow-y: auto;
+
+    display: none;
+    &.isOpened {
+        display: block;
+    }
 }
