--- a/packages/maker/src/common/MapCanvas.module.scss
+++ b/packages/maker/src/common/MapCanvas.module.scss
@@ -15,6 +15,9 @@
 
 .selectRect {
     position: absolute;
+    border: 2px solid #ff0000;
+    left: 0;
+    top: 0;
     z-index: 1;
     pointer-events: none;
 }
