画面境のグリッド表示を実装

--- a/packages/maker/src/common/MapView/index.module.scss
+++ b/packages/maker/src/common/MapView/index.module.scss
@@ -15,7 +15,7 @@
 
 .selectRect {
     position: absolute;
-    border: 2px solid #ff0000;
+    border: 1px solid #00f;
     left: 0;
     top: 0;
     z-index: 1;
