--- a/packages/maker/src/parts/PartsSelect.module.scss
+++ b/packages/maker/src/parts/PartsSelect.module.scss
@@ -1,8 +1,8 @@
 .toolPanel {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    width: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 100%;
 }
 
 .toolPanelItem {
