feat: パーツ選択画面を実装、パーツ出現に新参照ボタンを追加

--- a/packages/maker/src/common/PartsList.module.scss
+++ b/packages/maker/src/common/PartsList.module.scss
@@ -8,8 +8,15 @@ $chip-size: 40px;
      * @todo 単純に済ませるために line-height: 0 としているが、問題があったら flex や grid に変更しておく。
      */
     line-height: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .partsListContainer {
     width: $chip-size * 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
